# TransformerTTS-Pytorch

./: .gitignore  Makefile  inference.py  pyproject.toml  requirements.txt  test.ipynb
checkpoints/: generator_v3.pth:Zone.Identifier
checkpoints/checkpoints_23_12_2024_TTS_Transformer/: transformer_tts_epoch0.pth:Zone.Identifier
config/: hifigan.json  tts_transformer.json
hifigan/: vocoder.py
src/config/: config.py
src/data/: load_data.py  preprocess.py
tts_transformer/: dataset.py  model.py  train.py
