[tool.poetry]
name = "transnsformertts-pytorch"
version = "0.1.0"
description = ""
authors = ["khanhphamj <phukhanh1903@gmail.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^3.1.0"
jupyter = "^1.1.1"
llvmlite = "^0.43.0"
torch = "^2.5.1"
torchaudio = "^2.5.1"
librosa = "^0.10.2.post1"
matplotlib = "^3.9.3"
tqdm = "^4.67.1"
transformers = "^4.46.3"
python-dotenv = "^1.0.1"
polar = "^0.0.127"
polars = "^1.17.1"
dask = "^2024.12.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
